# raytracer

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  configure.in
build-aux/: boost.m4  debug.m4  graphics_magick.m4  std0x.m4  systemtap.m4
scene/: Objects.txt  Specular.txt  Teapot.txt  TwoLights.txt  photon.txt  traceAll
src/: Camera.cpp  Camera.hpp  ImageBuffer.cpp  ImageBuffer.hpp  ImageOutputAdaptor.cpp  ImageOutputAdaptor.hpp  Kdtree.cpp  Light.cpp  Light.hpp  Makefile.am  Material.hpp  Object3D.cpp  Object3D.hpp  Options.cpp  Options.hpp  Random3D.cpp  Random3D.hpp  Ray.hpp  Raytracer.cpp  Raytracer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  SuperSampling.cpp  SuperSampling.hpp  Transformation.hpp  TriangleMesh.hpp  ViewPlane.cpp  ViewPlane.hpp  common.hpp  main.cpp  math.hpp
src/gramma/: Makefile.am  ParseDriver.cpp  ParseDriver.hpp  SceneParser.ypp  SceneScanner.lpp
src/gramma/ply/: TrianglePly.hpp  ply.hpp  ply_parser.cpp  ply_parser.hpp
src/math/: LICENSE.txt  Makefile.am
src/math/doc/: mathlib.tex
src/math/include/math/: constants.h  fwd.h  matrix.h  utility.h
src/math/include/math/bits/: assign_dispatch.h  assign_elop.h  assign_generic.h  basic_matrix.h  binary.h  config.h  helpers.h  index_objects.h  indexing.h  matrix.h  matrix_inline.h  matrix_storage.h  opcodes.h  operations.h  operators.h  pseudo_matrix.h  scalar_traits.h  spec_dot.h  spec_index.h  spec_mmul.h  tmatrix.h  tmatrix_inline.h  tmatrix_types.h  unary.h  vector_inline.h
src/math/include/math/bits/simd/: config.h  intel_sse.h  select_impl.h  simd4_types.h
src/math/src/: matrix2.cpp  matrix3.cpp  matrix4.cpp
src/math/src/simd/: intel_sse.cpp
